[tool.poetry]
name = "vpn"
version = "0.1.0"
description = ""
authors = ["Kir <5420754+lastonoga@users.noreply.github.com>>"]

[tool.poetry.scripts]
vpn = "vpn.main:run"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pyTelegramBotAPI = "^4.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
